--- a/source/assets/scss/modules/cards.scss
+++ b/source/assets/scss/modules/cards.scss
@@ -92,7 +92,7 @@
                 .card-header-title {
                     transition: all $timing-default ease;
                     transform: translate3d(3px, 0, 0);
-                    color: $color_yellow-glow;
+                    color: $color_prime-bright;
                 }
                 .card-header-icon {
                     transition: all $timing-default * 2 ease;
