--- a/source/assets/scss/modules/containers.scss
+++ b/source/assets/scss/modules/containers.scss
@@ -225,7 +225,7 @@
                 color: #fff;
                 // a { // better defaults for dark containers
                 //     color: white;
-                //     &:hover, &:active, &:focus {color: $color_yellow-glow; }
+                //     &:hover, &:active, &:focus {color: $color_prime-bright; }
                 // }
             }
             background-color: $color;
