--- a/source/assets/scss/modules/overrides.scss
+++ b/source/assets/scss/modules/overrides.scss
@@ -187,9 +187,10 @@
         }
     }
     &--white, &-light {
-        @include link-colors (white, $color_yellow-glow, true);
+        @include link-colors (white, $color_prime-bright, true);
     }
     &-light-plain {
+        @include link-colors (white, white, false);
         color: white !important;
         border: none;
         &:hover {
@@ -207,8 +208,8 @@
             border-color: white(1);
         }
     }
-    &--yellow {
-        @include link-colors ($color_yellow-glow, white, true);
+    &--bright {
+        @include link-colors ($color_prime-bright, white, true);
         font-weight: $font-weight-bold;
     }
 
@@ -216,7 +217,7 @@
         @include link-colors ($color_aqua-glow, white, false);
     }
     &--mini-cta{
-        color: $color_yellow-glow !important;
+        color: $color_prime-bright !important;
         //font-weight: $font-weight-mid;
         &:hover {
             color: $white !important;
@@ -266,13 +267,13 @@
             opacity: 1;
         }
     }
-    &--yellow {
-        color: $color_yellow-glow;
+    &--bright {
+        color: $color_prime-bright;
         &:hover {
-            color: lighten($color_yellow-glow, 30%);
+            color: lighten($color_prime-bright, 30%);
         }
         &::after {
-            content: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 14'%3E%3Cpolygon fill='%23fff870' points='5.665 1 4 2.645 9.408 8 4 13.355 5.665 15 12.75 8'/%3E%3C/svg%3E");
+            content: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 14'%3E%3Cpolygon fill='%23ffffff' points='5.665 1 4 2.645 9.408 8 4 13.355 5.665 15 12.75 8'/%3E%3C/svg%3E");
             // content: url("/assets/icons/inlined/small/icon-chevron-right-yellow.svg");
             @include icon-after;
         }
@@ -284,7 +285,7 @@
 }
 .link--white-parent { // when you need to style a link inside a component/partial
     a {
-        @include link-colors (white, $color_yellow-glow, false);
+        @include link-colors (white, $color_prime-bright, false);
     }
 }
 .card {
