--- a/source/assets/scss/modules/tables.scss
+++ b/source/assets/scss/modules/tables.scss
@@ -34,7 +34,7 @@ table.table{
             background-color: rgba(0,0,0,0.3);
         }
         td.table-highlight{
-            color: $color_yellow-glow;
+            color: $color_prime-bright;
             font-weight: $font-weight-mid;
         }
         td.has-icon{
