--- a/source/assets/scss/modules/utility.scss
+++ b/source/assets/scss/modules/utility.scss
@@ -125,7 +125,7 @@ hr {
 }
 .block-yellow-link{
     @extend .block-white-link;
-    color: $color_yellow-glow;
+    color: $color_prime-bright;
 }
 
 // Random site helpers - potential to reorganize in the future - RR
