--- a/source/assets/scss/views/innovation.scss
+++ b/source/assets/scss/views/innovation.scss
@@ -25,7 +25,7 @@
         margin-bottom: 3rem;
         &__summary {
             a:not(.button) {
-                color: $color_yellow-glow;
+                color: $color_prime-bright;
                 font-weight: $font-weight-bold;
                 text-decoration: underline;
             }
