--- a/source/assets/scss/views/leadership-gallery.scss
+++ b/source/assets/scss/views/leadership-gallery.scss
@@ -94,7 +94,7 @@ $fadeDuration: 200ms;
 .callout--dark {
     p > a {
         font-weight: $font-weight-bold;
-        color: $color_yellow-glow;
+        color: $color_prime-bright;
         &:hover {
             color: white;
         }
