--- a/source/assets/scss/views/products.scss
+++ b/source/assets/scss/views/products.scss
@@ -331,7 +331,7 @@ ul.bullet-outside {
 }
 .underline {
     &-yellow {
-        border-bottom: 3px solid $color_yellow-glow;
+        border-bottom: 3px solid $color_prime-bright;
         display: inline-block;
     }
     &-aqua {
