--- a/source/assets/scss/mixins/functions.scss
+++ b/source/assets/scss/mixins/functions.scss
@@ -25,8 +25,8 @@
 // === mixins ====
 $link-color-default: #fff !default;
 $underline: false !default;
-// ex. @include link-colors (white, $color_yellow-glow, true);
-@mixin link-colors($color: $link-color-default, $hover-color: $color_yellow-glow, $has-underline: $underline ) {
+// ex. @include link-colors (white, $color_prime-bright, true);
+@mixin link-colors($color: $link-color-default, $hover-color: $color_prime-bright, $has-underline: $underline ) {
     font-weight: $font-weight-mid;
     transition: border-bottom .15s linear,color .15s linear;
     color: $color !important;
