--- a/source/assets/scss/views/about-us.scss
+++ b/source/assets/scss/views/about-us.scss
@@ -11,7 +11,7 @@
     -o-background-size: cover;
     background-size: cover;
     h4{
-        color: $color_yellow-glow;
+        color: $color_prime-bright;
         @include opacity(1);
     }
     h1{
@@ -26,7 +26,7 @@
     -o-background-size: cover;
     background-size: cover;
     h4{
-        color: $color_yellow-glow;
+        color: $color_prime-bright;
         @include opacity(1);
     }
     h1{
