--- a/source/open-source/index.html.erb
+++ b/source/open-source/index.html.erb
@@ -48,7 +48,7 @@ layout: "company"
                     
                     <h4 class="headline-5 color-white"><%= project["title"]%></h4>
                     <p class="faded"><%= project["description"]%></p>
-                    <p><a class="link-arrow--yellow" href="<%= project['url']%>"><%= project["cta"]%></a></p>
+                    <p><a class="link-arrow--bright" href="<%= project['url']%>"><%= project["cta"]%></a></p>
                     <%#= inline_svg("small/icon-chevron-right", class: "icon-inline svg-color--yellow-glow") %>
                 </div>
             </div>
