changing `link--yellow` to `link--bright`
"Bright" is the new label for a light, saturated brand color (eg. a neon, here it's green). Secondary [sticky] nav work. Cleaning up class naming on links. Mostly there.

--- a/source/404.html.erb
+++ b/source/404.html.erb
@@ -17,7 +17,7 @@ bgImage: "//images.ctfassets.net/189dvqdsjh46/4YMziFy6JGi6iKwsskImEG/1074c45f366
     <div class="row align-center group">
         <div class="columns small-12 large-8 text-center">
             <h1 class="headline-2">We got a little lost.</h1>
-            <p class="lead">Sorry! We couldn't find that page, or it doesn't exist. Visit our <a class="link--yellow" href="/" title="Datica Health home">main page</a>, use the search tool above &#9757;, or read some <a class="link--yellow" href="/blog" title="Datica Blog">blog posts</a>.</p>
+            <p class="lead">Sorry! We couldn't find that page, or it doesn't exist. Visit our <a class="link--bright" href="/" title="Datica Health home">main page</a>, use the search tool above &#9757;, or read some <a class="link--bright" href="/blog" title="Datica Blog">blog posts</a>.</p>
             <a href="/" class="button hollow large hollow-inverted">Go Home</a>
         </div>
     </div>
