--- a/source/compliant-kubernetes-service/_roadmap.html.slim
+++ b/source/compliant-kubernetes-service/_roadmap.html.slim
@@ -33,7 +33,7 @@ section.container-color--dark-grad-blue
         .row.align-center
           .columns.small-12.medium-7
             h1.headline-2.text-center = current_page.data.title
-            p.lead.text-center Our public roadmap gives customers and prospects full transparency into what we’re building. Read more about our decision to publish our product roadmap <a href="https://datica.com/blog/what-were-building-daticas-public-product-roadmap" class="link--yellow">here</a>.
+            p.lead.text-center Our public roadmap gives customers and prospects full transparency into what we’re building. Read more about our decision to publish our product roadmap <a href="https://datica.com/blog/what-were-building-daticas-public-product-roadmap" class="link--bright">here</a>.
             / p= the_form.title
 section.section-article.container-gray-11
   .row.align-center.small-up-1.medium-up-3.large-up-3
