--- a/source/compliant-kubernetes-service/aws.html.slim
+++ b/source/compliant-kubernetes-service/aws.html.slim
@@ -57,7 +57,7 @@ section.section-article.container-gray-3.container-image--center(data-interchang
   .row.align-center
     .columns.small-12.medium-10.large-8.text-center
       h1.headline-2.group.text-center Datica & AWS
-      p.group By relying on AWS to provide physical infrastructure compliance, and Datica to provide the rest, you'll be 100% HIPAA compliant at the infrastructure level. You'll still be responsible for the majority of application level and administrative compliance. However, Datica even helps there. Our <a class="link--yellow" href="/open-source/policies/">open source policies</a> are completely free to use and have been audited against HIPAA and HITRUST several times.
+      p.group By relying on AWS to provide physical infrastructure compliance, and Datica to provide the rest, you'll be 100% HIPAA compliant at the infrastructure level. You'll still be responsible for the majority of application level and administrative compliance. However, Datica even helps there. Our <a class="link--bright" href="/open-source/policies/">open source policies</a> are completely free to use and have been audited against HIPAA and HITRUST several times.
   .row.align-center
     .columns.small-12.medium-8
       img.group src="https://images.ctfassets.net/189dvqdsjh46/ZbmaDZgpmmWwmQwQ0coW6/1b50c5d5258c3bcb4cebd149512c1164/05-shared-response-aws-2x.png" alt="Explaining Shared Responsibility" /
