--- a/source/contentful_templates/series-view.html.slim
+++ b/source/contentful_templates/series-view.html.slim
@@ -86,7 +86,7 @@ article#series data-registered="true"
       .row.align-center
         .columns.small-12.large-7
           h3.headline-3.text-serif.nomargin Thanks for reading our series, <em>#{series.title}</em>.
-          p.lead Subscribe to our <a class="link--yellow" href="/blog" title="Read the blog">blog</a> for more insights from the Datica team.
+          p.lead Subscribe to our <a class="link--bright" href="/blog" title="Read the blog">blog</a> for more insights from the Datica team.
           = partial("/partials/content/cta", :locals => { :p => series["cta_ref"] })
 
 
