--- a/source/dhsf/index.html.erb
+++ b/source/dhsf/index.html.erb
@@ -46,7 +46,7 @@ smoothScroll: false
             <div class="waypoint-title subhead--small">
                 Explore the framework
             </div>
-            <a href="#content" class="pulse" title="Explore the framework" data-smooth-scroll data-animation-duration="350" data-animation-easing="swing">
+            <a href="#content" class="pulse link--light-plain" title="Explore the framework" data-smooth-scroll data-animation-duration="350" data-animation-easing="swing">
                 <%= inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon") %>
             </a>
         </div>
@@ -115,7 +115,7 @@ smoothScroll: false
                         <div class="columns small-12 medium-8 large-8">
                             <div class="row collapse">
                                 <div class="columns small-12">
-                                    <div class="subheader-small text--blue">Month <%= stage["time"] %></div>
+                                    <div class="subheader-small">Month <%= stage["time"] %></div>
                                     <h3 class="headline-5"><%= stage["title"] %></h3>
                                 </div>
                             </div>
@@ -217,7 +217,7 @@ smoothScroll: false
             <div class="waypoint-title subhead--small">
                 Go Further
             </div>
-            <a href="#cta" class="pulse" title="Learn more" data-smooth-scroll data-animation-duration="400" data-animation-easing="swing">
+            <a href="#cta" class="pulse link--light-plain" title="Learn more" data-smooth-scroll data-animation-duration="400" data-animation-easing="swing">
                 <%= inline_svg("icon-angle-down-large", class: "icon-size--large waypoint-icon") %>
             </a>
         </div>
