--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -86,7 +86,7 @@ customCSS: "innovation"
                         </div>
                         <div class="columns small-12 medium-9">
                             <h3 class="headline-5">
-                                <a class="link--yellow" href="/innovation/<%= podcast["slug"] %>" title="Listen to this episode now"><%= podcast["title"] %></a>
+                                <a class="link--bright" href="/innovation/<%= podcast["slug"] %>" title="Listen to this episode now"><%= podcast["title"] %></a>
                             </h3>
                             <div class="person hide-for-medium">
                                 <%= partial("partials/snippets/person", :locals => { :p => podcast["guest"] }) %>
@@ -117,7 +117,7 @@ customCSS: "innovation"
                         </div>
                     </div>
                 <% end %>
-                <p class="text-center"><a class="link--yellow" href="/podcast/">See More Podcasts <i class="fa fa-angle-right" aria-hidden="true"></i></a></p>
+                <p class="text-center"><a class="link--bright" href="/podcast/">See More Podcasts <i class="fa fa-angle-right" aria-hidden="true"></i></a></p>
             </div>
         </div>
     </section>
