--- a/source/partials/snippets/_person.erb
+++ b/source/partials/snippets/_person.erb
@@ -19,7 +19,7 @@ else
     person_summary = "Learn more about " + p.fullname
 end
 if defined?(style) && style == "light"
-    link_style = "link--yellow"
+    link_style = "link--bright"
 else
     link_style = nil
 end
