--- a/source/_index-old.html.slim
+++ b/source/_index-old.html.slim
@@ -24,7 +24,7 @@ asset_preload: '<link href="/public/img/art/home-header-art-hexagons-anim.svg" r
           h1.headline-1 The Industry Cloud For Digital Health
       .row.align-center.align-middle
         .columns.small-12.medium-6.large-5
-          h2.headline-3.text-light We provide you with <a class="link--yellow" href="/compliance" title="Datica Compliance Story">compliance</a> tools to <a class="link--yellow" href="/compliant-kubernetes-service" title="Datica Compliant Kubernetes® Service">deploy cloud-native workloads</a> and <a class="link--yellow" href="/compliant-managed-integration" title="Datica Compliant Managed Integration">integrate with EHRs</a>.
+          h2.headline-3.text-light We provide you with <a class="link--bright" href="/compliance" title="Datica Compliance Story">compliance</a> tools to <a class="link--bright" href="/compliant-kubernetes-service" title="Datica Compliant Kubernetes® Service">deploy cloud-native workloads</a> and <a class="link--bright" href="/compliant-managed-integration" title="Datica Compliant Managed Integration">integrate with EHRs</a>.
           /= partial "partials/snippets/button", :locals => { :label => "Learn About Datica CKS", :url => "/compliant-kubernetes-service/", :button_classes => "button hollow-inverted", :icon => "icon-chevron-right", :icon_color => "gray-8", :icon_align => "right", :item_id => "page-top", :data_track_group => "cks" }
         .columns.small-12.medium-6.large-4
           .card.container-color--light-shimmer.pad--sm
