--- a/source/partials/content/_collection-list.slim
+++ b/source/partials/content/_collection-list.slim
@@ -24,7 +24,7 @@
           - image = data.site.guides[entry.id].bg_image.url
         - else
           - image = "https://images.ctfassets.net/189dvqdsjh46/5H57YmN25vXuytmsytZyox/df95a9be30051747759f3acec9a59445/guide-tco-integrations-bg.jpg"
-        a.link-light-plain.lozad.thumbnail.bg-gray-3.pad--xl.container-image--center href=url title="Get your free Datica Guide" data-background-image="#{image}?fit=thumb&w=600&h=400"
+        a.link--light-plain.lozad.thumbnail.bg-gray-3.pad--xl.container-image--center href=url title="Get your free Datica Guide" data-background-image="#{image}?fit=thumb&w=600&h=400"
           = inline_svg("icon-file-pdf", class: "icon-size--large float-right-on-medium")
           h4.headline-4.nomargin.text-shadow = entry.title
           p.text-shadow=(entry.has_key?("subhead") ? entry.subhead : nil )
