--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -35,7 +35,7 @@ nav.nav data-theme=theme
     li.pad--lg.hide-for-large
       h4.headline-6.spaced-out News
       p.text-light <strong>Datica</strong> and <strong>Sansoro Health</strong> merge to help accelerate healthcare’s data-driven future in the cloud.
-      = partial "partials/snippets/button", :locals => { :label => "Read the Announcement", :url => "/press-release/sansoro-health-datica-announce-merger/", :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "merge_press_mobile", :data_track_group => "company", :expand => false }
+      = partial "partials/snippets/button", :locals => { :label => "Read the Announcement", :url => "/blog/sansoro-health-datica-combine-forces/", :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "merger_blog_mobile", :data_track_group => "company", :expand => false }
     - nav_collection.each do | id, nav_section |
       /p.lead.hide-for-medium = (nav_section.has_key?("subhead") ? nav_section.subhead : nil)
       - nav_section["related_entries"].each do | nav_item |
@@ -108,4 +108,4 @@ nav.nav data-theme=theme
     li.nav__item.nav__contact.button-group.stacked-for-small
       = partial "partials/snippets/button", :locals => { :label => "Get Pricing", :url => "/pricing/", :button_classes => "contact-button button success small", :item_id => "contact", :data_track_group => "nav", :expand => "false" }
       /| &nbsp;
-      = partial "partials/snippets/button", :locals => { :label => "(888) 377-3184", :url => "tel:8883773184", :button_classes => "call-button hide-for-large button small", :icon => "icon-phone", :icon_align => "left", :item_id => "phone", :data_track_group => "nav", :expand => "false" }
+      = partial "partials/snippets/button", :locals => { :label => "(888) 377-3184", :url => "tel:8883773184", :button_classes => "call-button hide-for-large button small secondary", :icon => "icon-phone", :icon_align => "left", :item_id => "phone", :data_track_group => "nav", :expand => "false" }
