--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -70,7 +70,7 @@ section#top.bg-gray-12.container-image-fill.lozad data-background-image=bg_produ
       /= partial "partials/snippets/button", :locals => { :label => "Read the Announcement", :url => "/blog/sansoro-health-datica-combine-forces", :button_classes => "button primary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "merger_article", :data_track_group => "company", :expand => false }
       = partial "partials/snippets/button", :locals => { :label => "Read the blog post", :url => "/blog/sansoro-health-datica-combine-forces/", :button_classes => "button success", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "merge_press", :data_track_group => "company", :expand => false }
       /= partial "partials/snippets/button", :locals => { :label => "Request a demo", :url => "/demo/", :button_classes => "button primary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "get_demo", :data_track_group => "compliance", :expand => false }
-.strip-bright
+.strip.strip-greens
 section#products.section-article.bg-gray-3.container-image-fill.lozad data-background-image=bg_product_dark
   .row.align-center
     .columns.small-12.medium-10.large-6.text-center
@@ -86,7 +86,7 @@ section#products.section-article.bg-gray-3.container-image-fill.lozad data-backg
       .row.align-center.small-up-1.medium-large-up-2
         = partial "partials/snippets/product-list.slim", :locals => { :size => "large", :style => "light", :category_links => true }
 
-.strip.strip-cmi
+.strip.strip-greens-left
 
 section.section-article#compliance
   .row.align-center.text-center
